<resources>
    <string name="app_name">AUEB Air Pro</string>
    <string name="button1">Κλιματιστικό</string>
    <string name="button2">Αφυγραντήρας</string>
    <string name="button3">Καθαρισμός Αέρα</string>
    <string name="help">Βοήθεια</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="minHumid">Ελάχιστη Υγρασία</string>
    <string name="Temp">Θερμοκρασία</string>
    <string name="intensity">Ένταση</string>
    <string name="dhMode">Επιλογή Λειτουργίας</string>
    <string name="Timer">Χρονόμετρο</string>
    <string name="info"><u>Πληροφορίες καιρού</u></string>
    <string name="reset"><font fgcolor='#000'>Επαναφορά</font></string>
    <string name="OK"><font fgcolor='#000'>OK</font></string>
    <string name="open_weather_maps_app_id">11111</string>
    <string-array name="modes">
        <item>Αυτόματο</item>
        <item>Turbo</item>
        <item>Αθόρυβο</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>