<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main">


    <Button
        android:id="@+id/button1"
        android:layout_width="267dp"
        android:layout_height="125dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/ac2"
        android:text="@string/button1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000"
        android:textSize="26sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        app:strokeColor="#000000"
        app:strokeWidth="2sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="267dp"
        android:layout_height="125dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/air"
        android:text="@string/button3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000"
        android:textSize="26sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877"
        app:strokeColor="#000000"
        app:strokeWidth="2sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="267dp"
        android:layout_height="125dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/drop"
        android:text="@string/button2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000"
        android:textSize="26sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665"
        app:strokeColor="#000000"
        app:strokeWidth="2sp" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:background="@drawable/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027">

    </ImageButton>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/help"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <ImageButton
        android:id="@+id/powerOn"
        android:layout_width="175dp"
        android:layout_height="168dp"
        android:background="@drawable/power1"
        android:paddingLeft="10dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194">

    </ImageButton>

    <ImageButton
        android:id="@+id/powerOff"
        android:layout_width="175dp"
        android:layout_height="168dp"
        android:background="@drawable/power"
        android:paddingLeft="10dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194">

    </ImageButton>


    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="75dp"
        android:layout_height="61dp"

        android:background="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />


</androidx.constraintlayout.widget.ConstraintLayout>